<?xml version="1.0" encoding="utf-8"?>
<!--<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context="prototype.softwareengineering.moneymanager.RegisterActivity">

    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
    <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
    <!--android:paddingTop="@dimen/activity_vertical_margin"-->

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        tools:ignore="ExtraText">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:title="@string/title_activity_register" /><![CDATA[

        app:popupTheme="@style/AppTheme.PopupOverlay" />

    ]]>
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--android:gravity="center_horizontal"-->
        <!--android:orientation="horizontal">-->

        <TextView
            android:id="@+id/registerName"
            android:layout_width="75dp"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="47dp"
            android:paddingRight="5dp"
            android:paddingLeft="0dp"
            android:paddingEnd="5dp"
            android:paddingStart="0dp"
            android:text="@string/name"
            android:textAlignment="textEnd"
            android:layout_gravity="end"/>

        <EditText
            android:id="@+id/editRegisterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/registerName"
            android:layout_toRightOf="@+id/registerName"
            android:layout_toEndOf="@+id/registerName"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_alignRight="@+id/editRegisterSurname"
            android:layout_alignEnd="@+id/editRegisterSurname" />

        <TextView
            android:id="@+id/registerSurname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editRegisterSurname"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/editRegisterSurname"
            android:layout_toStartOf="@+id/editRegisterSurname"
            android:paddingRight="5dp"
            android:paddingLeft="0dp"
            android:paddingEnd="5dp"
            android:paddingStart="0dp"
            android:text="@string/surname"
            android:textAlignment="textEnd"
            android:layout_gravity="end"/>

        <EditText
            android:id="@+id/editRegisterSurname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/space1"
            android:layout_toRightOf="@+id/registerName"
            android:layout_toEndOf="@+id/registerName"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_alignRight="@+id/fab"
            android:layout_alignEnd="@+id/fab" />

        <TextView
            android:id="@+id/registerDOB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editRegisterDOB"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/editRegisterDOB"
            android:layout_toStartOf="@+id/editRegisterDOB"
            android:paddingRight="5dp"
            android:paddingLeft="0dp"
            android:paddingEnd="5dp"
            android:paddingStart="0dp"
            android:text="@string/dob"
            android:textAlignment="textEnd"
            android:layout_gravity="end"/>

        <EditText
            android:id="@+id/editRegisterDOB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/space2"
            android:layout_toRightOf="@+id/registerSurname"
            android:layout_toLeftOf="@+id/registerSurname"
            android:layout_toStartOf="@+id/registerSurname"
            android:layout_toEndOf="@+id/registerSurname"
            android:ems="10"
            android:inputType="date"
            android:layout_alignRight="@+id/fab"
            android:layout_alignEnd="@+id/fab" />

        <TextView
            android:id="@+id/registerEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editRegisterEmail"
            android:layout_alignBottom="@+id/editRegisterEmail"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/editRegisterDOB"
            android:paddingRight="5dp"
            android:paddingLeft="0dp"
            android:paddingStart="0dp"
            android:paddingEnd="5dp"
            android:text="@string/prompt_email"
            android:textAlignment="textEnd"
            android:layout_gravity="end"
            android:layout_toLeftOf="@+id/editRegisterDOB" />

        <EditText
            android:id="@+id/editRegisterEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:layout_below="@+id/space3"
            android:layout_alignRight="@+id/fab"
            android:layout_alignEnd="@+id/fab"
            android:layout_toRightOf="@+id/registerEmail"
            android:layout_toEndOf="@+id/registerEmail" />

        <TextView
            android:id="@+id/registerPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editRegisterPassword"
            android:layout_alignBottom="@+id/editRegisterPassword"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/editRegisterPassword"
            android:layout_toStartOf="@+id/editRegisterPassword"
            android:paddingRight="5dp"
            android:paddingLeft="0dp"
            android:paddingStart="0dp"
            android:paddingEnd="5dp"
            android:text="@string/password"
            android:textAlignment="textEnd"
            android:layout_gravity="end"/>

        <EditText
            android:id="@+id/editRegisterPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:layout_below="@+id/space4"
            android:layout_alignLeft="@+id/editRegisterEmail"
            android:layout_alignStart="@+id/editRegisterEmail"
            android:layout_alignRight="@+id/fab"
            android:layout_alignEnd="@+id/fab" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/editRegisterPassword"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="11dp"
            android:layout_marginRight="11dp"
            android:layout_marginTop="18dp"
            android:adjustViewBounds="true"
            android:src="@android:drawable/ic_menu_save"
            app:backgroundTint="@color/colorPrimary" />

        <Space
            android:id="@+id/space2"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/registerSurname" />

        <Space
            android:id="@+id/space3"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/registerDOB" />

        <Space
            android:id="@+id/space1"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editRegisterName" />

        <Space
            android:id="@+id/space4"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_below="@+id/editRegisterEmail"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

    <include layout="@layout/content_register" />

    <!--</android.support.design.widget.CoordinatorLayout>-->
</LinearLayout>